# qol-plugin-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  version.yml
qol-search/: Cargo.toml
src/: activation.rs  color.rs  config.rs  daemon.rs  focus.rs  frecency.rs  keepalive.rs  lib.rs  monitor.rs  platform.rs  search.rs  window.rs
src/app_icon/: linux.rs  macos.rs  mod.rs
src/focus/: fallback.rs  linux.rs  macos.rs  mod.rs
