[package]
name = "qol-plugin-api"
version = "0.1.0"
edition = "2021"

[features]
default = ["gpui"]
gpui = ["dep:gpui"]

[dependencies]
dirs = "5.0"
gpui = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qol-runtime = { git = "https://github.com/qol-tools/qol-runtime" }

# macOS only: fix zed-font-kit core-graphics version mismatch
[patch.crates-io]
core-text = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-graphics = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
