[package]
name = "qol-plugin-api"
version = "0.1.0"
edition = "2021"
description = "Shared library for QoL Tray plugins"
license = "MIT"

[features]
default = ["gpui"]
gpui = ["dep:gpui"]
app-icons = []

[dependencies]
dirs = "6.0"
gpui = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qol-runtime = { git = "https://github.com/qol-tools/qol-runtime" }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSString", "NSObject", "NSURL"] }
objc2-app-kit = { version = "0.3", features = ["NSRunningApplication", "NSWorkspace", "NSImage", "NSImageRep", "NSGraphicsContext", "objc2-core-graphics"] }
objc2-core-graphics = { version = "0.3", features = ["CGImage", "CGDataProvider"] }

# macOS only: fix zed-font-kit core-graphics version mismatch
[patch.crates-io]
core-text = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-graphics = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }
core-foundation-sys = { git = "https://github.com/servo/core-foundation-rs", tag = "core-text-v21.0.0" }

[patch."https://github.com/qol-tools/qol-runtime"]
qol-runtime = { path = "../qol-runtime" }
